// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Select (snapshot) renders content composition (Group + Label + Items + Separator) 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-autocomplete="none"
      aria-controls="radix-_r_5_"
      aria-expanded="true"
      class="flex h-10 w-full items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1"
      data-placeholder=""
      data-state="open"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        Choose...
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down size-4 opacity-50"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0, -200%); min-width: max-content; --radix-popper-transform-origin:  ;"
  >
    <div
      class="relative z-50 max-h-[--radix-select-content-available-height] min-w-[8rem] overflow-y-auto overflow-x-hidden rounded-md border bg-popover text-popover-foreground shadow-md data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 origin-[--radix-select-content-transform-origin] data-[side=bottom]:translate-y-1 data-[side=left]:-translate-x-1 data-[side=right]:translate-x-1 data-[side=top]:-translate-y-1"
      data-align="start"
      data-side="bottom"
      data-state="open"
      dir="ltr"
      id="radix-_r_5_"
      role="listbox"
      style="box-sizing: border-box; display: flex; flex-direction: column; outline: none; --radix-select-content-transform-origin: var(--radix-popper-transform-origin); --radix-select-content-available-width: var(--radix-popper-available-width); --radix-select-content-available-height: var(--radix-popper-available-height); --radix-select-trigger-width: var(--radix-popper-anchor-width); --radix-select-trigger-height: var(--radix-popper-anchor-height); animation: none; pointer-events: auto;"
      tabindex="-1"
    >
      <style>
        [data-radix-select-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-select-viewport]::-webkit-scrollbar{display:none}
      </style>
      <div
        class="p-1 h-[var(--radix-select-trigger-height)] w-full min-w-[var(--radix-select-trigger-width)]"
        data-radix-select-viewport=""
        role="presentation"
        style="position: relative; flex: 1; overflow: hidden auto;"
      >
        <div
          aria-labelledby="radix-_r_6_"
          role="group"
        >
          <div
            class="py-1.5 pl-8 pr-2 text-sm font-semibold"
            id="radix-_r_6_"
          >
            Fruits
          </div>
          <div
            aria-labelledby="radix-_r_7_"
            aria-selected="false"
            class="relative flex w-full cursor-default select-none items-center rounded-sm py-1.5 pl-8 pr-2 text-sm outline-none focus:bg-accent focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50"
            data-radix-collection-item=""
            data-state="unchecked"
            role="option"
            tabindex="-1"
          >
            <span
              class="absolute left-2 flex size-3.5 items-center justify-center"
            />
            <span
              id="radix-_r_7_"
            >
              Apple
            </span>
          </div>
          <div
            aria-hidden="true"
            class="-mx-1 my-1 h-px bg-muted"
          />
          <div
            aria-labelledby="radix-_r_8_"
            aria-selected="false"
            class="relative flex w-full cursor-default select-none items-center rounded-sm py-1.5 pl-8 pr-2 text-sm outline-none focus:bg-accent focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50"
            data-radix-collection-item=""
            data-state="unchecked"
            role="option"
            tabindex="-1"
          >
            <span
              class="absolute left-2 flex size-3.5 items-center justify-center"
            />
            <span
              id="radix-_r_8_"
            >
              Banana
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Select (snapshot) renders disabled trigger 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-_r_3_"
  aria-expanded="false"
  class="flex h-10 w-full items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1"
  data-disabled=""
  data-placeholder=""
  data-state="closed"
  dir="ltr"
  disabled=""
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    Choose...
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down size-4 opacity-50"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`Select (snapshot) renders trigger with placeholder in closed state 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-_r_0_"
  aria-expanded="false"
  class="flex h-10 w-full items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1"
  data-placeholder=""
  data-state="closed"
  dir="ltr"
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    Choose...
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down size-4 opacity-50"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;
